v1.1.0/_sources/plc-txi-hxr-motion_txi_hxr_motion_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.136.31.1.1
      -
    * - Target IP address
      - 172.21.136.31
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _txi_hxr_motion_pragmas:

Pragmas
-------

Total pragmas found: 61
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.9.1
        lcls-twincat-motion, SLAC, Unset, 1.8.0
        lcls-twincat-physics, SLAC, Unset, 0.0.0
        lcls2-cc-lib, SLAC, Unset, 1.1.2
        PMPS, SLAC - LCLS, Unset, 3.0.14
        SysDir, System, , 3.5.12.0
        SysFile, System, , 3.5.9.0
        Tc2_EtherCAT, Beckhoff Automation GmbH, , 3.3.21.0
        Tc2_IoFunctions, Beckhoff Automation GmbH, , 3.3.13.0
        Tc2_Math, Beckhoff Automation GmbH, , 3.3.1.0
        Tc2_MC2, Beckhoff Automation GmbH, Unset, 3.3.48.0
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_SerialCom, Beckhoff Automation GmbH, , 3.3.10.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.3.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.26.0
        Tc2_TcpIp, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Utilities, Beckhoff Automation GmbH, , 3.3.54.0
        Tc3_EventLogger, Beckhoff Automation GmbH, , 3.1.33.0
        Tc3_JsonXml, Beckhoff Automation GmbH, , 3.3.18.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0
        TcUnit, www.tcunit.org, , 1.2.0.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 3365024 (32)


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 639097648 (8)
        Constants.bLittleEndian, BOOL, 637705184 (8)
        Constants.bMulticoreSupport, BOOL, 639097656 (8)
        Constants.bSimulationMode, BOOL, 637705192 (8)
        Constants.CompilerVersion, VERSION, 640334400 (64)
        Constants.CompilerVersionNumeric, DWORD, 640334496 (32)
        Constants.nPackMode, UINT, 639097632 (16)
        Constants.nRegisterSize, WORD, 637705200 (16)
        Constants.RuntimeVersion, VERSION, 640334336 (64)
        Constants.RuntimeVersionNumeric, DWORD, 640334464 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 3072064 (64)
        DefaultGlobals.stSys, ST_System, 3072000 (40)


GeneralConstants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GeneralConstants.MAX_STATES, UINT, 3072048 (16)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 3364192 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 3364320 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 3363312 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 3364352 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>242 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 3157440 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 3157344 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 3157376 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 3157216 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 3157312 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 3157152 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 3157408 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 3157184 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 3157248 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 3157280 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 3157024 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 3156800 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 3156928 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 3156992 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 3156896 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 3157056 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 3157088 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 3156864 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 3156832 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 3156960 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 3156736 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 3157120 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 3156704 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 3156768 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 3157472 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 3157504 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 3158560 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 3158496 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 3158592 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 3158624 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 3158656 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 3158688 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 3158528 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 3156592 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 3156528 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 3156656 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 3156368 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 3156640 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 3156400 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 3156352 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 3156480 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 3156672 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 3156496 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 3156512 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 3156608 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 3156384 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 3156576 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 3156432 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 3156464 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 3156544 (16)
        Global_Variables.ADSSTATE_START, UINT, 3156416 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 3156448 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 3156624 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 3156560 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 3224256 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 3224288 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 3222992 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 3156064 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 3073136 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 3156288 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 3156304 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 3156176 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 3156096 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 3156160 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 3156192 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 3156112 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 3156128 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 3156144 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 3156208 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 3156224 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 3156240 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 3156256 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 3156272 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 3156080 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 3156336 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 3156320 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 640427568 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 3158720 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 3156696 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 3073128 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 3072328 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 3156688 (8)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 644806880 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 3237216 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 3237248 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 3243520 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 3243488 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 3243456 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 3243552 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 3159392 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 633591232 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 3360720 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 3160984 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 3360728 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 3360736 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 633591168 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 3224864 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 3362888 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 3362592 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 3362464 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 3223008 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 3159376 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 3224352 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 3224336 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 3224368 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 3224384 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 3224400 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 3224704 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 3224480 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 3224800 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 3224576 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 3224768 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 3224832 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 3224416 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 3224448 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 3224640 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 3224544 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 3224672 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 3224736 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 3224608 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 3224512 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 3158816 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 3158880 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 3158848 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 3158752 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 3158912 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 3158784 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 3225216 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 3224960 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 3224320 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 3160992 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 3160976 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 3160944 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 3160960 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 3224224 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 3222656 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 3222688 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 644806816 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 644806848 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 3222560 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 3222528 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 3222496 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT (2..100), 3160928 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 3222720 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 3222848 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 3222872 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 3222864 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 3222984 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 3159488 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 646077312 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 3222976 (8)
        Global_Variables.nWatchdogTime, BYTE, 3158744 (8)
        Global_Variables.PI, LREAL, 3159424 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 3222912 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 3222944 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 3222880 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 3222752 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 3158304 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 3157664 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 3157632 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 3222784 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 3222816 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 3157728 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 3158048 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 3158016 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 3224192 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 3157888 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 3157696 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 3157984 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 3157920 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 3157760 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 3158080 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 3157952 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 3157824 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 3157856 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 3157792 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 3222592 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 3222624 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 3158112 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 3157536 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 3157568 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 3157600 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 3158176 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 3158144 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 3158208 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 3158272 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 3158240 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 3158728 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 3158736 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 3231840 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 3232192 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 3231776 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 3232128 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 3231552 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 3230704 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 3231088 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 3231712 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 3232064 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 3231584 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 3231936 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 3231648 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 3232000 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 3159360 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 3159344 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 3159248 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 3159184 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 3159200 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 3159216 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 3159168 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 3159232 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 3159312 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 3159264 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 3159296 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 3159328 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 3159280 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 633584192 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 644806208 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 644805952 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 644805920 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 644806144 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 644806176 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 644806016 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 644806048 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 644806080 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 644805984 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 644806112 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 644806464 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 644806336 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 644806304 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 644806240 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 644806400 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 644806432 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 644806272 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 644806368 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 646696480 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 646696064 (416)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 3158432 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 3158336 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 3158400 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 3158368 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 3158464 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 3232256 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 3155200 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 3363328 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 633591296 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 633583904 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 3363616 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 3363904 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 3155488 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 3155776 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 3160640 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 3364608 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 3365056 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 3160032 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 633565728 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.fbArbiter1, FB_Arbiter, 639236928 (474624)
        GVL.fbFastFaultOutput1, FB_HardwareFFOutput, 639711552 (495296)
        GVL.fbFastFaultOutput1.q_xFastFaultOut, BOOL, 639711816 (8)
        GVL.nLangId_OnlineMonitoring, DINT, 3364544 (32)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 3364896 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 3072040 (8)
        GVL_Logger.cLogHost, STRING(15), 3072128 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 3073216 (81984)
        GVL_Logger.iLogPort, UINT, 3072256 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 3073184 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 3072384 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 3072352 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 3072336 (16)
        GVL_Logger.nTrickleTripTime, TIME, 3072416 (32)
        GVL_Logger.nTripResetPeriod, TIME, 3072448 (32)
        GVL_Logger.sIpTidbit, STRING(6), 3072272 (56)
        GVL_Logger.sPlcHostname, STRING(80), 3072480 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 3073152 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 3367488 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 3363224 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 3365376 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 3365360 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 3365344 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 3367520 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 3365408 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 3365392 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 3365440 (2048)


GVL_Physics
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Physics.fbScatteringFactors, FB_ScatteringFactorLUT, 633591616 (575872)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 625244864 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT (UINT#1..GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite), 625228864 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 3367504 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 625194784 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 625194752 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 3367512 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 625196832 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 3367552 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 625196864 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 3365400 (8)


Main
^^^^

.. raw:: html

   <details>
       <summary>66 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Main.M1, DUT_MotionStage, 640206848 (21248)
        Main.M1.Axis.NcToPlc, NCTOPLC_AXIS_REF, 640207936 (2048)
        Main.M1.Axis.PlcToNc, PLCTONC_AXIS_REF, 640206912 (1024)
        Main.M1.bBrakeRelease, BOOL, 640215960 (8)
        Main.M1.bHardwareEnable, BOOL, 640215968 (8)
        Main.M1.bHome, BOOL, 640215952 (8)
        Main.M1.bLimitBackwardEnable, BOOL, 640215944 (8)
        Main.M1.bLimitForwardEnable, BOOL, 640215936 (8)
        Main.M1.nRawEncoderINT, INT, 640216080 (16)
        Main.M1.nRawEncoderUINT, UINT, 640216064 (16)
        Main.M1.nRawEncoderULINT, ULINT, 640216000 (64)
        Main.M2, DUT_MotionStage, 640228096 (21248)
        Main.M2.Axis.NcToPlc, NCTOPLC_AXIS_REF, 640229184 (2048)
        Main.M2.Axis.PlcToNc, PLCTONC_AXIS_REF, 640228160 (1024)
        Main.M2.bBrakeRelease, BOOL, 640237208 (8)
        Main.M2.bHardwareEnable, BOOL, 640237216 (8)
        Main.M2.bHome, BOOL, 640237200 (8)
        Main.M2.bLimitBackwardEnable, BOOL, 640237192 (8)
        Main.M2.bLimitForwardEnable, BOOL, 640237184 (8)
        Main.M2.nRawEncoderINT, INT, 640237328 (16)
        Main.M2.nRawEncoderUINT, UINT, 640237312 (16)
        Main.M2.nRawEncoderULINT, ULINT, 640237248 (64)
        Main.M3, DUT_MotionStage, 640249344 (21248)
        Main.M3.Axis.NcToPlc, NCTOPLC_AXIS_REF, 640250432 (2048)
        Main.M3.Axis.PlcToNc, PLCTONC_AXIS_REF, 640249408 (1024)
        Main.M3.bBrakeRelease, BOOL, 640258456 (8)
        Main.M3.bHardwareEnable, BOOL, 640258464 (8)
        Main.M3.bHome, BOOL, 640258448 (8)
        Main.M3.bLimitBackwardEnable, BOOL, 640258440 (8)
        Main.M3.bLimitForwardEnable, BOOL, 640258432 (8)
        Main.M3.nRawEncoderINT, INT, 640258576 (16)
        Main.M3.nRawEncoderUINT, UINT, 640258560 (16)
        Main.M3.nRawEncoderULINT, ULINT, 640258496 (64)
        Main.M4, DUT_MotionStage, 640270592 (21248)
        Main.M4.Axis.NcToPlc, NCTOPLC_AXIS_REF, 640271680 (2048)
        Main.M4.Axis.PlcToNc, PLCTONC_AXIS_REF, 640270656 (1024)
        Main.M4.bBrakeRelease, BOOL, 640279704 (8)
        Main.M4.bHardwareEnable, BOOL, 640279712 (8)
        Main.M4.bHome, BOOL, 640279696 (8)
        Main.M4.bLimitBackwardEnable, BOOL, 640279688 (8)
        Main.M4.bLimitForwardEnable, BOOL, 640279680 (8)
        Main.M4.nRawEncoderINT, INT, 640279824 (16)
        Main.M4.nRawEncoderUINT, UINT, 640279808 (16)
        Main.M4.nRawEncoderULINT, ULINT, 640279744 (64)
        Main.M5, DUT_MotionStage, 640291840 (21248)
        Main.M5.Axis.NcToPlc, NCTOPLC_AXIS_REF, 640292928 (2048)
        Main.M5.Axis.PlcToNc, PLCTONC_AXIS_REF, 640291904 (1024)
        Main.M5.bBrakeRelease, BOOL, 640300952 (8)
        Main.M5.bHardwareEnable, BOOL, 640300960 (8)
        Main.M5.bHome, BOOL, 640300944 (8)
        Main.M5.bLimitBackwardEnable, BOOL, 640300936 (8)
        Main.M5.bLimitForwardEnable, BOOL, 640300928 (8)
        Main.M5.nRawEncoderINT, INT, 640301072 (16)
        Main.M5.nRawEncoderUINT, UINT, 640301056 (16)
        Main.M5.nRawEncoderULINT, ULINT, 640300992 (64)
        Main.M6, DUT_MotionStage, 640313088 (21248)
        Main.M6.Axis.NcToPlc, NCTOPLC_AXIS_REF, 640314176 (2048)
        Main.M6.Axis.PlcToNc, PLCTONC_AXIS_REF, 640313152 (1024)
        Main.M6.bBrakeRelease, BOOL, 640322200 (8)
        Main.M6.bHardwareEnable, BOOL, 640322208 (8)
        Main.M6.bHome, BOOL, 640322192 (8)
        Main.M6.bLimitBackwardEnable, BOOL, 640322184 (8)
        Main.M6.bLimitForwardEnable, BOOL, 640322176 (8)
        Main.M6.nRawEncoderINT, INT, 640322320 (16)
        Main.M6.nRawEncoderUINT, UINT, 640322304 (16)
        Main.M6.nRawEncoderULINT, ULINT, 640322240 (64)

.. raw:: html

   </details>
   <br />


MOTION_GVL
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MOTION_GVL.MAX_STATES, INT, 625196848 (16)
        MOTION_GVL.stInvalidState, DUT_PositionState, 633568960 (2944)
        MOTION_GVL.stUnknownState, DUT_PositionState, 633566016 (2944)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT (81..10000), 3364576 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 633576512 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 633576800 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 633576544 (32)
        PMPS_GVL.cnMaxStateArrayLen, INT, 633580416 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 633578656 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 633576896 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 633580448 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 633576576 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 633576704 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 633575424 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 633582560 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 633581536 (1024)
        PMPS_GVL.g_cBoundaries, INT, 633581472 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 633580432 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 633576608 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 633576816 (16)
        PMPS_GVL.PERange, PE_Ranges, 633576448 (32)
        PMPS_GVL.reVHyst, REAL, 633581504 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 633576832 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 633573664 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 633571904 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 633576480 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 633576768 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 633576640 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 633583584 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 633581488 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 633583616 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 633583648 (256)


PRG_01_PLCTASK
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_01_PLCTASK.fbLogHandler, FB_LogHandler, 646703872 (5784896)


PRG_AL1L1_L2SI
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_AL1L1_L2SI.fbAL1L1, FB_REF, 634205824 (779712)
        PRG_AL1L1_L2SI.fbAL1L1.fbLaser.fbGetLasPercent.iRaw, INT, 634984288 (16)
        PRG_AL1L1_L2SI.fbAL1L1.fbLaser.fbSetLasPercent.iRaw, INT, 634985152 (16)
        PRG_AL1L1_L2SI.fbAL1L1.fbLaser.iLaserINT, INT, 634984208 (16)
        PRG_AL1L1_L2SI.fbAL1L1.fbLaser.iShutdownINT, INT, 634984192 (16)
        PRG_AL1L1_L2SI.fbAL1L1.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 634214400 (2048)
        PRG_AL1L1_L2SI.fbAL1L1.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 634213376 (1024)


PRG_IM2L1_PPM
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>18 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_IM2L1_PPM.fbIM2L1, FB_PPM, 634986944 (1370560)
        PRG_IM2L1_PPM.fbIM2L1.fbFlowMeter.fRaw, INT, 636357216 (16)
        PRG_IM2L1_PPM.fbIM2L1.fbGige.bGigePower, BOOL, 636356016 (8)
        PRG_IM2L1_PPM.fbIM2L1.fbGige.fbGetIllPercent.iRaw, INT, 636356128 (16)
        PRG_IM2L1_PPM.fbIM2L1.fbGige.fbSetIllPercent.iRaw, INT, 636356992 (16)
        PRG_IM2L1_PPM.fbIM2L1.fbGige.iIlluminatorINT, INT, 636356000 (16)
        PRG_IM2L1_PPM.fbIM2L1.fbPowerMeter.fbGetPMVoltage.iRaw, INT, 635970016 (16)
        PRG_IM2L1_PPM.fbIM2L1.fbPowerMeter.fbThermoCouple.bError, BOOL, 635969736 (8)
        PRG_IM2L1_PPM.fbIM2L1.fbPowerMeter.fbThermoCouple.bOverrange, BOOL, 635969752 (8)
        PRG_IM2L1_PPM.fbIM2L1.fbPowerMeter.fbThermoCouple.bUnderrange, BOOL, 635969744 (8)
        PRG_IM2L1_PPM.fbIM2L1.fbPowerMeter.fbThermoCouple.iRaw, INT, 635969760 (16)
        PRG_IM2L1_PPM.fbIM2L1.fbPowerMeter.iVoltageINT, INT, 635777376 (16)
        PRG_IM2L1_PPM.fbIM2L1.fbYagThermoCouple.bError, BOOL, 636357448 (8)
        PRG_IM2L1_PPM.fbIM2L1.fbYagThermoCouple.bOverrange, BOOL, 636357464 (8)
        PRG_IM2L1_PPM.fbIM2L1.fbYagThermoCouple.bUnderrange, BOOL, 636357456 (8)
        PRG_IM2L1_PPM.fbIM2L1.fbYagThermoCouple.iRaw, INT, 636357472 (16)
        PRG_IM2L1_PPM.fbIM2L1.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 635001408 (2048)
        PRG_IM2L1_PPM.fbIM2L1.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 635000384 (1024)

.. raw:: html

   </details>
   <br />


PRG_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_PMPS.fbArbiterIO, FB_SubSysToArbiter_IO, 639097664 (138752)
        PRG_PMPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 639098464 (1760)
        PRG_PMPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 639100224 (1760)
        PRG_PMPS.fbArbiterIO.xTxPDO_state, BIT, 639101985 (1)
        PRG_PMPS.fbArbiterIO.xTxPDO_toggle, BIT, 639101984 (1)


PRG_SL3L1_SCATTER
^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>19 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_SL3L1_SCATTER.bExecuteMotion, BOOL, 637701960 (8)
        PRG_SL3L1_SCATTER.bMoveOk, BOOL, 637701952 (8)
        PRG_SL3L1_SCATTER.bTest, BOOL, 637701968 (8)
        PRG_SL3L1_SCATTER.fbSL3L1, FB_SLITS, 636358144 (1343808)
        PRG_SL3L1_SCATTER.fbSL3L1.AptArrayReq, ST_PMPS_Aperture_IO, 637701824 (96)
        PRG_SL3L1_SCATTER.fbSL3L1.AptArrayStatus, ST_PMPS_Aperture_IO, 637701728 (96)
        PRG_SL3L1_SCATTER.fbSL3L1.fbBottomBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 636661120 (2048)
        PRG_SL3L1_SCATTER.fbSL3L1.fbBottomBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 636660096 (1024)
        PRG_SL3L1_SCATTER.fbSL3L1.fbNorthBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 636960512 (2048)
        PRG_SL3L1_SCATTER.fbSL3L1.fbNorthBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 636959488 (1024)
        PRG_SL3L1_SCATTER.fbSL3L1.fbSouthBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 637259904 (2048)
        PRG_SL3L1_SCATTER.fbSL3L1.fbSouthBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 637258880 (1024)
        PRG_SL3L1_SCATTER.fbSL3L1.fbTopBlade.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 636361728 (2048)
        PRG_SL3L1_SCATTER.fbSL3L1.fbTopBlade.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 636360704 (1024)
        PRG_SL3L1_SCATTER.mcPower, MC_Power, 637702016 (3072)
        PRG_SL3L1_SCATTER.rEncoderOffsetBottom, REAL, 637705088 (32)
        PRG_SL3L1_SCATTER.rEncoderOffsetNorth, REAL, 637705120 (32)
        PRG_SL3L1_SCATTER.rEncoderOffsetSouth, REAL, 637705152 (32)
        PRG_SL3L1_SCATTER.rEncoderOffsetTop, REAL, 637701984 (32)

.. raw:: html

   </details>
   <br />


PRG_TXI_PM
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>29 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_TXI_PM.dumbymotor, DUT_MotionStage, 639075776 (21248)
        PRG_TXI_PM.dumbymotor.Axis.NcToPlc, NCTOPLC_AXIS_REF, 639076864 (2048)
        PRG_TXI_PM.dumbymotor.Axis.PlcToNc, PLCTONC_AXIS_REF, 639075840 (1024)
        PRG_TXI_PM.dumbymotor.bBrakeRelease, BOOL, 639084888 (8)
        PRG_TXI_PM.dumbymotor.bHardwareEnable, BOOL, 639084896 (8)
        PRG_TXI_PM.dumbymotor.bHome, BOOL, 639084880 (8)
        PRG_TXI_PM.dumbymotor.bLimitBackwardEnable, BOOL, 639084872 (8)
        PRG_TXI_PM.dumbymotor.bLimitForwardEnable, BOOL, 639084864 (8)
        PRG_TXI_PM.dumbymotor.nRawEncoderINT, INT, 639085008 (16)
        PRG_TXI_PM.dumbymotor.nRawEncoderUINT, UINT, 639084992 (16)
        PRG_TXI_PM.dumbymotor.nRawEncoderULINT, ULINT, 639084928 (64)
        PRG_TXI_PM.fbTXIPM, FB_PPM, 637705216 (1370560)
        PRG_TXI_PM.fbTXIPM.fbFlowMeter.fRaw, INT, 639075488 (16)
        PRG_TXI_PM.fbTXIPM.fbGige.bGigePower, BOOL, 639074288 (8)
        PRG_TXI_PM.fbTXIPM.fbGige.fbGetIllPercent.iRaw, INT, 639074400 (16)
        PRG_TXI_PM.fbTXIPM.fbGige.fbSetIllPercent.iRaw, INT, 639075264 (16)
        PRG_TXI_PM.fbTXIPM.fbGige.iIlluminatorINT, INT, 639074272 (16)
        PRG_TXI_PM.fbTXIPM.fbPowerMeter.fbGetPMVoltage.iRaw, INT, 638688288 (16)
        PRG_TXI_PM.fbTXIPM.fbPowerMeter.fbThermoCouple.bError, BOOL, 638688008 (8)
        PRG_TXI_PM.fbTXIPM.fbPowerMeter.fbThermoCouple.bOverrange, BOOL, 638688024 (8)
        PRG_TXI_PM.fbTXIPM.fbPowerMeter.fbThermoCouple.bUnderrange, BOOL, 638688016 (8)
        PRG_TXI_PM.fbTXIPM.fbPowerMeter.fbThermoCouple.iRaw, INT, 638688032 (16)
        PRG_TXI_PM.fbTXIPM.fbPowerMeter.iVoltageINT, INT, 638495648 (16)
        PRG_TXI_PM.fbTXIPM.fbYagThermoCouple.bError, BOOL, 639075720 (8)
        PRG_TXI_PM.fbTXIPM.fbYagThermoCouple.bOverrange, BOOL, 639075736 (8)
        PRG_TXI_PM.fbTXIPM.fbYagThermoCouple.bUnderrange, BOOL, 639075728 (8)
        PRG_TXI_PM.fbTXIPM.fbYagThermoCouple.iRaw, INT, 639075744 (16)
        PRG_TXI_PM.fbTXIPM.fbYStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 637719680 (2048)
        PRG_TXI_PM.fbTXIPM.fbYStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 637718656 (1024)

.. raw:: html

   </details>
   <br />


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 640355904 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 640355392 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 640355520 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 640355648 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 640355264 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 640355776 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 640389056 (960)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 640337664 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 640334528 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 640336576 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 640337632 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 640337600 (32)


